--- a/Yet_another_copy_of_Yet_another_copy_of_Python_practice.ipynb
+++ b/Yet_another_copy_of_Yet_another_copy_of_Python_practice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN3UAKH918oqNZyyi9eEVMq",
+      "authorship_tag": "ABX9TyNd5xiz4jSl6rA36hYdWbKV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1880,12 +1880,307 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Strings chars in single,double and triple quotes\n",
+        "name=\"Madhav\"  #creating a string\n",
+        "print(name)\n",
+        "\n",
+        "print(type(name))  #checking data type\n",
+        "\n",
+        "print(\"Hello world\")\n",
+        "print('Hello world')\n",
+        "print(\"It's easy\")\n",
+        "print('\"Quotes\"')\n",
+        "print(\" \\\" Quotes awesome \\\" \")"
+      ],
       "metadata": {
-        "id": "1IG7VrHB7Xqi"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1IG7VrHB7Xqi",
+        "outputId": "f27d7228-0935-4dd8-9d20-faef7d43eaf3"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Madhav\n",
+            "<class 'str'>\n",
+            "Hello world\n",
+            "Hello world\n",
+            "It's easy\n",
+            "\"Quotes\"\n",
+            " \" Quotes awesome \" \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#formatted strings\n",
+        "#1.old style formatting - %operator\n",
+        "name=\"Madhav\"\n",
+        "age=16\n",
+        "print(\"my name is %s and I'm %d\" %(name,age))  #%s,%d are placeholders for strings and integers"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fMH1h5P3HreH",
+        "outputId": "4eb97f9c-1fe4-4d3c-e9b9-263b93c5e286"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "my name is Madhav and I'm 16\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#2. str.format() method\n",
+        "\n",
+        "name=\"madhav\"\n",
+        "age=16\n",
+        "print(\"my name is {} and i'm {}\".format(name,age))\n",
+        "\n",
+        "#you can refernce variables by index or keyword\n",
+        "print(\"my name is {0} and i'm {1}\".format(name,age))\n",
+        "print(\"my name is {1} and i'm {0}\".format(name,age))\n",
+        "\n",
+        "print(\"my name is {name} and i'm {age}\".format(name=\"mona\",age=28))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CDNEvRaSITLD",
+        "outputId": "b1be88b6-28ca-4bd4-d1e4-e8c8719c78cd"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "my name is madhav and i'm 16\n",
+            "my name is madhav and i'm 16\n",
+            "my name is 16 and i'm madhav\n",
+            "my name is mona and i'm 28\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#3. f-strings\n",
+        "name=\"Bhavyesh\"\n",
+        "age=1\n",
+        "print(f\"my name is {name} and i'm {age}\")\n",
+        "print(f\"my age after 5 years will be {age+5}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BowUdqAeLI7-",
+        "outputId": "279c84d3-2c1f-4e29-d72a-70849f6f65bf"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "my name is Bhavyesh and i'm 1\n",
+            "my age after 5 years will be 6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Excape characters - backslash with characters\n",
+        "print('''\"Kw-double Quotes\"''')\n",
+        "print(\"\\\"kw-double Quotes\\\" \")   # double quotes using\n",
+        "print(\"\\'kw-single Quotes\\' \")   #Single quotes\n",
+        "\n",
+        "print(\"Hello \\nWorld\")   #new line\n",
+        "print(\"Hello\\tworld\")    #tab-space\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NjOWrnS2L6le",
+        "outputId": "f757ba9a-fac4-40eb-d8f5-40de2937bbe8"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\"Kw-double Quotes\"\n",
+            "\"kw-double Quotes\" \n",
+            "'kw-single Quotes' \n",
+            "Hello \n",
+            "World\n",
+            "Hello\tworld\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#strings operators in Python\n",
+        "a=\"Hello\"\n",
+        "b=\"Python\"\n",
+        "\n",
+        "print(a+b) #concatenate\n",
+        "print(a*2) #multiple copies\n",
+        "print(b*3)\n",
+        "\n",
+        "if \"h\" in a:\n",
+        "  print(\"Yess\")\n",
+        "else:\n",
+        "  print(\"Noo\")\n",
+        "\n",
+        "if \"h\" not in a:\n",
+        "  print(\"yes\")\n",
+        "else:\n",
+        "  print(\"No\")\n",
+        "\n",
+        "print(r\"Hello\\nWorld\")   #Raw string:suppress the escape characters"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LjXYov9uPdX0",
+        "outputId": "1ca16a82-c1d4-4859-9681-aa1401dd14cc"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "HelloPython\n",
+            "HelloHello\n",
+            "PythonPythonPython\n",
+            "Noo\n",
+            "yes\n",
+            "Hello\\nWorld\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##String Indexing"
+      ],
+      "metadata": {
+        "id": "NdaJ-VjkTfYX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_name=\"Madhav\"\n",
+        "#index-012345\n",
+        "print(my_name[0])   # first character of string\n",
+        "print(my_name[1])\n",
+        "print(my_name[2])\n",
+        "print(my_name[3])\n",
+        "print(my_name[4])\n",
+        "print(my_name[5])\n",
+        "\n",
+        "name2=\"Hello World\"\n",
+        "#index:012345678910\n",
+        "#-ve index:-1,-2,-3,-4,-5......\n",
+        "print(name2[5])    #banck space is also a character\n",
+        "print(name2[6])\n",
+        "\n",
+        "print(name2[-1])   #last character from string\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T88is-0zTkby",
+        "outputId": "e645785f-a059-48b1-a22f-bef76db08aeb"
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "M\n",
+            "a\n",
+            "d\n",
+            "h\n",
+            "a\n",
+            "v\n",
+            " \n",
+            "W\n",
+            "d\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##String Slicing\n"
+      ],
+      "metadata": {
+        "id": "3cqgroPbXaDT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_name=\"Madhav\"\n",
+        "#syntax: string[start:end:step]\n",
+        "print(my_name[0:3])\n",
+        "print(my_name[0:3:1])\n",
+        "\n",
+        "print(my_name[0:5:1])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dLLzM7RdXcqm",
+        "outputId": "3d53d528-82a1-4dc2-d0ea-c8081dec6c87"
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mad\n",
+            "Mad\n",
+            "Madha\n"
+          ]
+        }
+      ]
     }
   ]
 }
