--- a/Yet_another_copy_of_Yet_another_copy_of_Python_practice.ipynb
+++ b/Yet_another_copy_of_Yet_another_copy_of_Python_practice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNd5xiz4jSl6rA36hYdWbKV",
+      "authorship_tag": "ABX9TyMgc+MGvDMWsA2LVAQQBFyf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2160,16 +2160,31 @@
         "print(my_name[0:3])\n",
         "print(my_name[0:3:1])\n",
         "\n",
-        "print(my_name[0:5:1])"
+        "print(my_name[0:5:1])\n",
+        "print(my_name[3:5:1])\n",
+        "print(my_name[0:5:2])\n",
+        "\n",
+        "print(my_name[0:2])     #first 2 chars\n",
+        "print(my_name[0:3])     #first 3 chars\n",
+        "print(my_name[2:5])     #third to fifth chars\n",
+        "print(my_name[1:4])\n",
+        "\n",
+        "print(my_name[-1])      #last char of str\n",
+        "print(my_name[5:])\n",
+        "print(my_name[-2:])\n",
+        "print(my_name[0:5:2])    #every seconf char\n",
+        "print(my_name[:])        #all char\n",
+        "print(my_name[::])       #all char\n",
+        "print(my_name[::-1])     #reverse the string"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dLLzM7RdXcqm",
-        "outputId": "3d53d528-82a1-4dc2-d0ea-c8081dec6c87"
+        "outputId": "afb97d7b-0acc-455e-b767-66154946e0da"
       },
-      "execution_count": 71,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -2177,10 +2192,288 @@
           "text": [
             "Mad\n",
             "Mad\n",
-            "Madha\n"
+            "Madha\n",
+            "ha\n",
+            "Mda\n",
+            "Ma\n",
+            "Mad\n",
+            "dha\n",
+            "adh\n",
+            "v\n",
+            "v\n",
+            "av\n",
+            "Mda\n",
+            "Madhav\n",
+            "Madhav\n",
+            "vahdaM\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##String Method"
+      ],
+      "metadata": {
+        "id": "rhixF4H95xlF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#1.len()\n",
+        "word=\"Hello, Madhav is great\"\n",
+        "print(len(word))\n",
+        "\n",
+        "#2.upper()\n",
+        "print(word.upper())\n",
+        "\n",
+        "#3.Lower()\n",
+        "print(word.lower())\n",
+        "\n",
+        "#4.count()\n",
+        "print(word.count(\"d\"))  #count the letter how many times it occurs\n",
+        "\n",
+        "#5.find()\n",
+        "print(word.find(\"H\"))   #it gives position of index value\n",
+        "\n",
+        "#6.split()\n",
+        "print(word.split(\",\"))\n",
+        "print(word.split())\n",
+        "\n",
+        "#7.Replace()\n",
+        "print(word.replace(\"Madhav\",\"Bhavyesh\"))\n",
+        "\n",
+        "#8.Title()\n",
+        "print(word.title())    #it makes the capital letter for every starting word\n",
+        "\n",
+        "#9.strip()\n",
+        "word2=\"   Hello World   \"\n",
+        "print(len(word2))\n",
+        "print(word2.strip())\n",
+        "\n",
+        "#10.Join()\n",
+        "zword=(\"madhav\",\"is\",\"Great\")\n",
+        "print(\" \".join(zword))\n",
+        "print(\"-\".join(zword))\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "abr5DSrs51Fa",
+        "outputId": "e74b87c7-99d2-424b-f6f3-ae49739f552d"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "22\n",
+            "HELLO, MADHAV IS GREAT\n",
+            "hello, madhav is great\n",
+            "1\n",
+            "0\n",
+            "['Hello', ' Madhav is great']\n",
+            "['Hello,', 'Madhav', 'is', 'great']\n",
+            "Hello, Bhavyesh is great\n",
+            "Hello, Madhav Is Great\n",
+            "17\n",
+            "Hello World\n",
+            "madhav is Great\n",
+            "madhav-is-Great\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Assigmnet-4"
+      ],
+      "metadata": {
+        "id": "p1nkLy4b-_ny"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#1.Limit the decimal places to 2 digits using format method and print result,for the variable pi=3.14159265359\n",
+        "\n",
+        "pi=3.14159265359\n",
+        "print(\"value of pi is {}\".format(pi)) #using f-function formatting float numbers\n",
+        "print(\"{:.2f}\".format(pi))\n",
+        "\n",
+        "#f-string\n",
+        "print(f\"{pi:.2f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RDu85FXd_CJO",
+        "outputId": "b337e258-369b-47f9-c357-9a4c9f5d489b"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "value of pi is 3.14159265359\n",
+            "3.14\n",
+            "3.14\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#2.Extract characters from index 2 to 8 with a step of 2:Given my_string = \"Python course\", slice character from index 2 to 8 skipping evry other character\n",
+        "my_string = \"Python course\"\n",
+        "print(my_string[2:8:2])\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yL_0ZeLcA2MU",
+        "outputId": "5d444128-2504-4726-b203-807c23a351fb"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "to \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#3.Slice to get only the middle character(s): for my_string=\"Madhav\", use slicing to extract the middle character(s)\n",
+        "\n",
+        "my_string=\"Madhav\"  #6 chars - even\n",
+        "my_string2=\"madhava\" #7 chars - odd\n",
+        "print(my_string[2:4])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c06UMgSUBqpL",
+        "outputId": "1293bcb6-fc74-475b-81a7-510c0324cbbc"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "dh\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#4.Remove the first 3 and last 3 character: Given my_string = \"Regression Analysis\", remove the first 3 and last 3 chars\n",
+        "my_string=\"Regression Analysis\"\n",
+        "print(my_string[3:-3])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7vpNPM8JD2A5",
+        "outputId": "d2196d1c-fa08-4957-d0cd-c71c64d69db8"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ression Analy\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#5.Get the substring that starts 4 characters from the end to the last character: for my_string=\"Classification\",slice the string starting from the 4th character from the end to the last character\n",
+        "my_string=\"Classification\"\n",
+        "print(my_string[-4:])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JkGK-3zZEn4L",
+        "outputId": "326afb88-cbfb-4dac-a379-2d30d99bd100"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tion\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#6.How to reverse a string using Python string methods\n",
+        "word=\"Python\"\n",
+        "print(word[::-1])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZYeMfJcmFR41",
+        "outputId": "057ceb58-c7e3-4289-97c9-9153b18efe04"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "nohtyP\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#7. Write a Python function to cehck if a string is a palindrome using string mehtods\n",
+        "word=\"madam\"\n",
+        "\n",
+        "def is_palindrome(s):\n",
+        "  if s==s[::-1]:\n",
+        "   print(f\"{s} is a palindrome\")\n",
+        "  else:\n",
+        "    print(f\"{s} is not a palindrome\")"
+      ],
+      "metadata": {
+        "id": "LPXPKd3eFtYi"
+      },
+      "execution_count": 53,
+      "outputs": []
     }
   ]
 }
