--- a/Yet_another_copy_of_Yet_another_copy_of_Python_practice.ipynb
+++ b/Yet_another_copy_of_Yet_another_copy_of_Python_practice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMgc+MGvDMWsA2LVAQQBFyf",
+      "authorship_tag": "ABX9TyMja/TfHisNgAKvJqLf/6cw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2462,18 +2462,107 @@
       "source": [
         "#7. Write a Python function to cehck if a string is a palindrome using string mehtods\n",
         "word=\"madam\"\n",
+        "word2=\"madan\"\n",
         "\n",
         "def is_palindrome(s):\n",
         "  if s==s[::-1]:\n",
         "   print(f\"{s} is a palindrome\")\n",
         "  else:\n",
-        "    print(f\"{s} is not a palindrome\")"
+        "    print(f\"{s} is not a palindrome\")\n",
+        "\n",
+        "is_palindrome(word)\n",
+        "is_palindrome(word2)"
       ],
       "metadata": {
-        "id": "LPXPKd3eFtYi"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LPXPKd3eFtYi",
+        "outputId": "bdd89988-2bba-4524-f83b-c59abf7ff519"
       },
-      "execution_count": 53,
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "madam is a palindrome\n",
+            "madan is not a palindrome\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "qkALj1MVOnXB"
+      },
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Loops in Python - While & for lop"
+      ],
+      "metadata": {
+        "id": "b50aWa2qQ7fs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#while Loop\n",
+        "count=0\n",
+        "while count<5:   #condition\n",
+        "  print(count)\n",
+        "  count=count+1\n",
+        "#print number from 1 to 5 using while loop\n",
+        "count=1\n",
+        "while count<6:\n",
+        "  print(count)\n",
+        "  count+=1\n",
+        "\n",
+        "count=5\n",
+        "while count>0:\n",
+        "  print(count)\n",
+        "  count-=1\n",
+        "else:\n",
+        "  print(\"While loop ended\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kNtiuD2ARB70",
+        "outputId": "2a0a1171-5d10-47e9-cddd-fe33ca424289"
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "5\n",
+            "4\n",
+            "3\n",
+            "2\n",
+            "1\n",
+            "While loop ended\n"
+          ]
+        }
+      ]
     }
   ]
 }
